# rl-pipeline

./: .gitignore  Dockerfile  README.md  generate_new_responses.py  generate_old_responses.py  instance_setup.sh  justfile  main.py  old_responses.json  pyproject.toml  questions.json  rl_ppo.py
models/llama_1b_rl_trained_epoch_1/: README.md
models/llama_1b_rl_trained_on_coqa_dataset_epoch_1_epoch_1/: adapter_config.json
src/: Constants.py  GeneralFunctions.py  LlamaRLTrainer.py  QuestionDataset.py  RLConfig.py  StructureDataset.py
src/rl_pipeline/: GeneralFunctions.py  LlamaRLTrainer.py  RLConfig.py  RougeScore.py  StructureDataset.py  main.py  utils.py
src/rl_pipeline/datasets/: coqa.py  dataset.py
