[project]
name = "rl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "peft>=0.18.0",
  "rouge-score>=0.1.2",
  "datasets>=4.4.1",
]

[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
download-coqa = "rl_pipeline.datasets.coqa:CoqaDataset.download"
